[package]
name = "raft-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.5"
rand = "0.8"
chrono = "0.4.42"
dashmap = "6.1.0"
rocksdb = "0.24.0"
bincode = "2.0.1"

[dev-dependencies]
tempfile = "3.23.0"
